log
Wed 20 Mar 2024 11:53:46 PM UTC: 
 exercises.c | 27 ++++++++++-----------------
 1 file changed, 10 insertions(+), 17 deletions(-)
 tests:  0|5
total_score: 0/70
ce036a0
Wed 20 Mar 2024 11:54:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
38d4f58
Thu 21 Mar 2024 12:01:54 AM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:13: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   62 |   int aux = first(L);
      |             ^~~~~
exercises.c:65:9: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   65 |     aux = next(L);
      |         ^
cc1: all warnings being treated as errors
Compilation failed
84ce19b
Thu 21 Mar 2024 12:03:10 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:13: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   62 |   int aux = first(L);
      |             ^~~~~
exercises.c:65:9: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   65 |     aux = next(L);
      |         ^
cc1: all warnings being treated as errors
Compilation failed
0ebc86f
Thu 21 Mar 2024 12:04:26 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:13: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   62 |   int aux = first(L);
      |             ^~~~~
exercises.c:63:14: error: comparison between pointer and integer [-Werror]
   63 |   while (aux != NULL) {
      |              ^~
exercises.c:65:9: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   65 |     aux = next(L);
      |         ^
cc1: all warnings being treated as errors
Compilation failed
5763512
Thu 21 Mar 2024 12:05:02 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:14: error: comparison between pointer and integer [-Werror]
   63 |   while (aux != NULL) {
      |              ^~
exercises.c:65:9: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   65 |     aux = next(L);
      |         ^
cc1: all warnings being treated as errors
Compilation failed
078d61e
Thu 21 Mar 2024 12:06:22 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:14: error: comparison between pointer and integer [-Werror]
   63 |   while (aux != NULL) {
      |              ^~
exercises.c:66:9: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |     aux = first(L);
      |         ^
cc1: all warnings being treated as errors
Compilation failed
6da63eb
Thu 21 Mar 2024 12:09:31 AM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:13: error: dereferencing ‘void *’ pointer [-Werror]
   63 |     suma += *first(L);
      |             ^~~~~~~~~
exercises.c:63:13: error: void value not ignored as it ought to be
cc1: all warnings being treated as errors
Compilation failed
94a2240
Thu 21 Mar 2024 12:09:43 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
3094035
Thu 21 Mar 2024 12:15:34 AM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
3094035
Thu 21 Mar 2024 12:20:46 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
a636df9
Thu 21 Mar 2024 12:22:16 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:3: error: ‘aux’ undeclared (first use in this function)
   80 |   aux = first(L);
      |   ^~~
exercises.c:80:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:81:9: error: expected ‘(’ before ‘aux’
   81 |   while aux != NULL) {
      |         ^~~
      |         (
exercises.c:81:3: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   81 |   while aux != NULL) {
      |   ^~~~~
exercises.c:81:20: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   81 |   while aux != NULL) {
      |                    ^
exercises.c:81:20: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
edb9505
Thu 21 Mar 2024 12:22:30 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:3: error: ‘aux’ undeclared (first use in this function)
   80 |   aux = first(L);
      |   ^~~
exercises.c:80:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3931993
Thu 21 Mar 2024 12:22:46 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:8: error: variable or field ‘aux’ declared void
   80 |   void aux = first(L);
      |        ^~~
exercises.c:80:14: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   80 |   void aux = first(L);
      |              ^~~~~
exercises.c:81:14: error: comparison between pointer and integer [-Werror]
   81 |   while (aux != NULL) {
      |              ^~
exercises.c:84:11: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   84 |       aux = next(L);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
3af0b75
Thu 21 Mar 2024 12:23:37 AM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
3392b49
Thu 21 Mar 2024 12:27:01 AM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
9c4137c
Thu 21 Mar 2024 12:27:36 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:83:7: error: too many arguments to function ‘popCurrent’
   83 |       popCurrent(L, elem);
      |       ^~~~~~~~~~
In file included from exercises.c:1,
                 from test.c:5:
arraylist.h:32:7: note: declared here
   32 | void *popCurrent(List *L);
      |       ^~~~~~~~~~
Compilation failed
040831c
Thu 21 Mar 2024 12:28:25 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:82:13: error: comparison between pointer and integer [-Werror]
   82 |     if (aux == elem) {
      |             ^~
exercises.c:83:7: error: too many arguments to function ‘popCurrent’
   83 |       popCurrent(L, elem);
      |       ^~~~~~~~~~
In file included from exercises.c:1,
                 from test.c:5:
arraylist.h:32:7: note: declared here
   32 | void *popCurrent(List *L);
      |       ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
be31914
